@@ -2,16 +2,16 @@
 // Use of this source code is governed by a BSD-style
 // license that can be found in the LICENSE-MMAP-GO file.
 
+//go:build darwin || dragonfly || freebsd || linux || openbsd || solaris || netbsd
 // +build darwin dragonfly freebsd linux openbsd solaris netbsd
 
 // Modifications (c) 2017 The Memory Authors.
 
-package memory
+package memory // import "modernc.org/memory"
 
 import (
 	"os"
 	"syscall"
-	"unsafe"
 )
 
 const pageSizeLog = 20
@@ -33,13 +33,17 @@ func unmap(addr uintptr, size int) error {
 // pageSize aligned.
 func mmap(size int) (uintptr, int, error) {
 	size = roundup(size, osPageSize)
-	b, err := syscall.Mmap(-1, 0, size+pageSize, syscall.PROT_READ|syscall.PROT_WRITE, syscall.MAP_SHARED|syscall.MAP_ANON)
+	// The actual mmap syscall varies by architecture. mmapSyscall provides same
+	// functionality as the unexported funtion syscall.mmap and is declared in
+	// mmap_*_*.go and mmap_fallback.go. To add support for a new architecture,
+	// check function mmap in src/syscall/syscall_*_*.go or
+	// src/syscall/zsyscall_*_*.go in Go's source code.
+	p, err := mmapSyscall(0, uintptr(size+pageSize), syscall.PROT_READ|syscall.PROT_WRITE, syscall.MAP_PRIVATE|syscall.MAP_ANON, -1, 0)
 	if err != nil {
 		return 0, 0, err
 	}
 
-	n := len(b)
-	p := uintptr(unsafe.Pointer(&b[0]))
+	n := size + pageSize
 	if p&uintptr(osPageMask) != 0 {
 		panic("internal error")
 	}
@@ -51,7 +55,6 @@ func mmap(size int) (uintptr, int, error) {
 			return 0, 0, err
 		}
 
-		b = b[m:]
 		n -= m
 		p += uintptr(m)
 	}
